[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 112

[tool.poetry]
name = "cryptokey"
version = "0.3.0"
description = "Python library for pluggable asymmetrical low-level encryption"
authors = ["Jörn Heissler <NOSPAM-cryptokey@joern-heissler.de>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/joernheissler/cryptokey"
repository = "https://github.com/joernheissler/cryptokey"
documentation = "https://cryptokey.1e8.de/"
keywords = [
    "Cryptography",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = [
    "cryptokey/py.typed",
]

[tool.poetry.dependencies]
python = "^3.8"
asn1crypto = "^1.4.0"
sphinx = { version = "^3.3.0", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
tox = "^3.20.1"
coverage = "^5.3"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.coverage]

[tool.coverage.run]
branch = true
source = [
    "tests",
    "cryptokey",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
#skip_covered = true
show_missing = true
