[metadata]
author = Jörn Heissler
author_email = NOSPAM-cryptokey@joern.heissler.de
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.5
description = Python library for pluggable asymmetric low-level encryption
keywords =
    Cryptography
license = MIT
long_description = file: README.rst
name = cryptokey
url = https://github.com/joernheissler/cryptokey
version = attr: cryptokey.__version__

[options]
packages = find:
zip_safe = True

[bdist_wheel]
python-tag = py3
