[metadata]
author = Jörn Heissler
author_email = NOSPAM-cryptokey@joern.heissler.de
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
description = Python library for pluggable asymmetric low-level encryption
keywords =
    Cryptography
license = MIT
long_description = file: README.rst
name = cryptokey
url = https://github.com/joernheissler/cryptokey
version = 0.2.2

[options]
include_package_data = False
install_requires =
    asn1crypto
packages = find:
python_requires = >= 3.7
zip_safe = True

[options.package_data]
cryptokey =
    py.typed

[bdist_wheel]
python-tag = py3

[mypy]
no_implicit_optional = True
mypy_path = stubs
